# Search-Tree-Algorithms

./: CMakeLists.txt
Search Tree Algorithms/: CMakeLists.txt  tree.cpp
lab4/: tests.cpp  tree.cpp  tree.h
